# settlement_switch---rust

./: .gitignore  init-contract.bat  run-init.bat  run-local.bat  test-contract.bat  vercel.json
contract/: .gitignore  contracts-config.ts  hardhat.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contract/constants/: chainlink-feeds.js
contract/contracts/: PriceOracle.sol  StablecoinRouter.sol
contract/contracts/adapters/: AcrossBridgeAdapter.sol  HopBridgeAdapter.sol  MockBridgeAdapter.sol  StargateAdapter.sol
contract/contracts/interfaces/: IBridgeAdapter.sol  (+1 more)
contract/scripts/: deploy.js  export-abis.js  interact.js  setup-oracle.js  verify-contracts.js
contract/test/: StablecoinRouter.test.js
frontend/: add-adapters.js  check-contract.js  init-only.js  initialize-contract.js  next.config,mjs  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  quick-check.js  setup-contract.js  setup-env.bat  setup-env.sh  tailwind.config.ts  test-contract.js  test-routes.js  vercel.json
frontend/app/: config.ts  globals.css  layout.tsx  page-clean.tsx  page.tsx  providers.tsx
stylus/: .dockerignore  .env.example  Cargo.toml  Dockerfile  add_adapters.sh  deploy.ps1  deploy.sh  rust-toolchain.toml  setup_contract.sh  verify.sh
stylus/.cargo/: config.toml
stylus/scripts/: deploy.rs  wsl_build.sh
stylus/src/: bridge_adapter.rs  chainlink.rs  erc20.rs  lib.rs  main.rs  price_oracle.rs  router.rs
stylus/src/adapters/: across.rs  hop.rs  mock.rs  mod.rs  stargate.rs
stylus/src/oracle/: mod.rs  price_oracle.rs
stylus/tests/: integration_tests.rs
(+14 files in other folders)
