[package]
name = "settlement-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types  = { version = "=0.8.20", default-features = false }
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "export-abi"
path = "src/bin/export_abi.rs"
required-features = ["export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"